@@ -18,7 +18,14 @@ function vnc_view() {
 	$idAgent = (int)get_parameter('id_agente', 0);
 	$ipAgent = db_get_value('direccion', 'tagente', 'id_agente', $idAgent);
 
-	echo "<iframe src='http://$ipAgent:5800' width='100%' height=550>";
+	$display = get_parameter("display", 0);
+	echo "<form method=post>";
+	echo __("VNC Display (:0 by default)");
+	echo "<input type=text name=display value=$display>";
+	echo "<input type=submit value='".__("Send")."'>";
+	echo "</form>";
+	$port = 5800 + $display;
+	echo "<iframe src='http://$ipAgent:$port' width='100%' height=600>";
 	echo "</iframe>";
 }
 
